Fixed inputs visibility

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
 .logoContainer {
     background-color: rgba(0, 0, 0, 0.4);
     margin-top: 100px;
-    height: 250px;
+    height: 225px;
     width: 35vw;
     position: relative;
     display: flex;
@@ -63,7 +63,6 @@ footer {
     
 }
 .right h1 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 30px;
     width: 60ch;
     overflow-wrap: break-word;
@@ -90,13 +89,13 @@ form {
 input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #E5E7EB;
-    border-radius: 5px;   
+    border: 2px solid #C4C4C4;
+    border-radius: 8px;   
 }
 input:focus {
     outline: none;
-    border-color: #7fbfff; /* Light blue */
-    box-shadow: 0px 0px 5px rgba(127, 191, 255, 0.8); /* Light blue */
+    border-color: #7fbbff; /* Light blue */
+    box-shadow: 0px 0px 5px rgba(127, 191, 255, 0.5); /* Light blue */
 }
 .background {
     background-color: white;
